build/log/idf_py_stdout_output_10660
[1/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/images/ui_img_auto_2_png.c.obj
[2/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/components/ui_comp_hook.c.obj
[3/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/gui.c.obj
[4/30] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ultrasonic.c.obj
[5/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/images/ui_img_backgorund1_png.c.obj
[6/30] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
D:/finalna/4_fresh_start_squareline/main/app_main.c:33:20: warning: 'SENSORS_TAG' defined but not used [-Wunused-variable]
   33 | static const char *SENSORS_TAG = "sensors";
      |                    ^~~~~~~~~~~
D:/finalna/4_fresh_start_squareline/main/app_main.c:32:20: warning: 'MAIN_TAG' defined but not used [-Wunused-variable]
   32 | static const char *MAIN_TAG = "main";
      |                    ^~~~~~~~
[7/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/images/ui_img_wifi_2_png.c.obj
[8/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/images/ui_img_temperatura_2_png.c.obj
[9/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/images/ui_img_linije_2_png.c.obj
[10/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/screens/ui_Home_Scr.c.obj
FAILED: esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/screens/ui_Home_Scr.c.obj 
ccache D:\espressif\.espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DLV_CONF_INCLUDE_SIMPLE -DLV_LVGL_H_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -ID:/finalna/4_fresh_start_squareline/build/config -ID:/finalna/4_fresh_start_squareline/components/gui/squareline/project -ID:/espressif/esp/v5.0.2/esp-idf/components/newlib/platform_include -ID:/espressif/esp/v5.0.2/esp-idf/components/freertos/FreeRTOS-Kernel/include -ID:/espressif/esp/v5.0.2/esp-idf/components/freertos/esp_additions/include/freertos -ID:/espressif/esp/v5.0.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/espressif/esp/v5.0.2/esp-idf/components/freertos/esp_additions/include -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_hw_support/include -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_hw_support/include/soc -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_hw_support/include/soc/esp32 -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_hw_support/port/esp32/. -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_hw_support/port/esp32/private_include -ID:/espressif/esp/v5.0.2/esp-idf/components/heap/include -ID:/espressif/esp/v5.0.2/esp-idf/components/log/include -ID:/espressif/esp/v5.0.2/esp-idf/components/soc/include -ID:/espressif/esp/v5.0.2/esp-idf/components/soc/esp32/. -ID:/espressif/esp/v5.0.2/esp-idf/components/soc/esp32/include -ID:/espressif/esp/v5.0.2/esp-idf/components/hal/esp32/include -ID:/espressif/esp/v5.0.2/esp-idf/components/hal/include -ID:/espressif/esp/v5.0.2/esp-idf/components/hal/platform_port/include -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_rom/include -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_rom/include/esp32 -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_rom/esp32 -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_common/include -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_system/include -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_system/port/soc -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_system/port/include/private -ID:/espressif/esp/v5.0.2/esp-idf/components/xtensa/include -ID:/espressif/esp/v5.0.2/esp-idf/components/xtensa/esp32/include -ID:/espressif/esp/v5.0.2/esp-idf/components/lwip/include -ID:/espressif/esp/v5.0.2/esp-idf/components/lwip/include/apps -ID:/espressif/esp/v5.0.2/esp-idf/components/lwip/include/apps/sntp -ID:/espressif/esp/v5.0.2/esp-idf/components/lwip/lwip/src/include -ID:/espressif/esp/v5.0.2/esp-idf/components/lwip/port/esp32/include -ID:/espressif/esp/v5.0.2/esp-idf/components/lwip/port/esp32/include/arch -ID:/finalna/4_fresh_start_squareline/components/lvgl -ID:/finalna/4_fresh_start_squareline/components/lvgl/src -ID:/finalna/4_fresh_start_squareline/components -ID:/finalna/4_fresh_start_squareline/components/lvgl/examples -ID:/finalna/4_fresh_start_squareline/components/lvgl/demos -ID:/finalna/4_fresh_start_squareline/components/lvgl_esp32_drivers -ID:/finalna/4_fresh_start_squareline/components/lvgl_esp32_drivers/lvgl_tft -ID:/finalna/4_fresh_start_squareline/components/lvgl_esp32_drivers/lvgl_touch -ID:/espressif/esp/v5.0.2/esp-idf/components/driver/include -ID:/espressif/esp/v5.0.2/esp-idf/components/driver/deprecated -ID:/espressif/esp/v5.0.2/esp-idf/components/driver/esp32/include -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_pm/include -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_ringbuf/include -ID:/espressif/esp/v5.0.2/esp-idf/components/esp_timer/include -mlongcalls -Wno-frame-address  -O3 -DNDEBUG -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/finalna/4_fresh_start_squareline=. -fmacro-prefix-map=D:/espressif/esp/v5.0.2/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.2\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/screens/ui_Home_Scr.c.obj -MF esp-idf\gui\CMakeFiles\__idf_gui.dir\squareline\project\screens\ui_Home_Scr.c.obj.d -o esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/screens/ui_Home_Scr.c.obj -c D:/finalna/4_fresh_start_squareline/components/gui/squareline/project/screens/ui_Home_Scr.c
D:/finalna/4_fresh_start_squareline/components/gui/squareline/project/screens/ui_Home_Scr.c: In function 'ui_Home_Scr_screen_init':
D:/finalna/4_fresh_start_squareline/components/gui/squareline/project/screens/ui_Home_Scr.c:49:42: error: 'lv_font_montserrat_30' undeclared (first use in this function); did you mean 'lv_font_montserrat_10'?
   49 |     lv_obj_set_style_text_font(ui_Time, &lv_font_montserrat_30, LV_PART_MAIN | LV_STATE_DEFAULT);
      |                                          ^~~~~~~~~~~~~~~~~~~~~
      |                                          lv_font_montserrat_10
D:/finalna/4_fresh_start_squareline/components/gui/squareline/project/screens/ui_Home_Scr.c:49:42: note: each undeclared identifier is reported only once for each function it appears in
[11/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/images/ui_img_temperatura_3_png.c.obj
[12/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/images/ui_img_wifi_2_yes_png.c.obj
[13/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/ui.c.obj
D:/finalna/4_fresh_start_squareline/components/gui/squareline/project/ui.c: In function 'ui_event_Button1':
D:/finalna/4_fresh_start_squareline/components/gui/squareline/project/ui.c:337:16: warning: unused variable 'target' [-Wunused-variable]
  337 |     lv_obj_t * target = lv_event_get_target(e);
      |                ^~~~~~
D:/finalna/4_fresh_start_squareline/components/gui/squareline/project/ui.c: In function 'ui_event_Button_text':
D:/finalna/4_fresh_start_squareline/components/gui/squareline/project/ui.c:345:16: warning: unused variable 'target' [-Wunused-variable]
  345 |     lv_obj_t * target = lv_event_get_target(e);
      |                ^~~~~~
D:/finalna/4_fresh_start_squareline/components/gui/squareline/project/ui.c: In function 'ui_event_main_display_button':
D:/finalna/4_fresh_start_squareline/components/gui/squareline/project/ui.c:353:16: warning: unused variable 'target' [-Wunused-variable]
  353 |     lv_obj_t * target = lv_event_get_target(e);
      |                ^~~~~~
D:/finalna/4_fresh_start_squareline/components/gui/squareline/project/ui.c: In function 'ui_event_Camera_View':
D:/finalna/4_fresh_start_squareline/components/gui/squareline/project/ui.c:361:16: warning: unused variable 'target' [-Wunused-variable]
  361 |     lv_obj_t * target = lv_event_get_target(e);
      |                ^~~~~~
[14/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/images/ui_img_chatgpt_image_5__tra_2025__12_12_01_png.c.obj
[15/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/images/ui_img_barkground2_png.c.obj
[16/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/images/ui_img_chatgpt_image_5__tra_2025__11_56_30_png.c.obj
[17/30] Building C object esp-idf/gui/CMakeFiles/__idf_gui.dir/squareline/project/images/ui_img_c0046b708db5008bf8a1298f7560f0d2_png.c.obj
ninja: build stopped: subcommand failed.
